@startuml

class StringDequeQueue {
    + append(...state: str)
    + prepend(...state: str)
    + pop() -> Optional[str]
}

class StateContext {
    + queue: StringDequeQueue
    + context: Any
}

class QSM {
    - queue: StringDequeQueue
    + state_map: Dict[str, State]
    + current_state: str
    - context: Any
    + get_next_state() -> Optional[str]
    + execute_current_state()
    + loop(initial_state: Optional[str] = None)
}

class State {
    + handlers: Dict[str, PayloadHandler]
    + execute(ctx: StateContext)
}

QSM --o State
QSM --> StringDequeQueue : "consumes from"
QSM --* StateContext
State --> StringDequeQueue : "enqueues states"
StateContext --o QSM::context : "containerizes"
StateContext --o QSM::queue : "containerizes"
State --> StateContext : "consumes"
@enduml
